# fracints

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: ci.yml
fracints/: Cargo.toml  README.md
fracints/src/: awfracint.rs  constants.rs  errors.rs  fiN.rs  impl_fiN.rs  impl_fiN_2.rs  impl_signed.rs  internal.rs  lib.rs  normint_parse_error.rs  signed_macro.rs  signed_macro2.rs  traits.rs
fracints_internals/: Cargo.toml
fracints_internals/src/: lib.rs  signed_macro.rs  signed_macro2.rs  str_conversion.rs  traits.rs
fracints_macros/: Cargo.toml
fracints_macros/src/: lib.rs
testcrate/: Cargo.toml
testcrate/benches/: basic.rs
testcrate/src/lib/: common.rs  optimize.rs  optimizeables.rs  sqrt.rs
testcrate/tests/: advanced.rs  basic_cases.rs  sanity.rs  str_conv.rs  test.rs
