[package]
name = "fracints"
version = "0.1.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/fracints"
documentation = "https://docs.rs/fracints"
description = "Special case fractional-only fixed point numbers"
keywords = ["numerics", "math", "no_std"]
categories = ["data-structures", "mathematics", "algorithms", "no-std"]
publish = false

[dependencies]
awint = { path = "../../awint/awint", default-features = false, features = ["alloc"] }
fracints_internals = { version = "0.1", path = "../fracints_internals", default-features = false }
fracints_macros = { version = "0.1", path = "../fracints_macros" }
rand_core = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.8"

[features]
default = ["std"]
std = []
rand_support = ["rand_core", "fracints_internals/rand_support"]
serde_support = ["serde"]
