[package]
name = "fracints"
version = "0.1.0"
edition = "2024"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/fracints"
documentation = "https://docs.rs/fracints"
description = "Special case fractional-only fixed point numbers"
keywords = ["numerics", "math", "no_std"]
categories = ["data-structures", "mathematics", "algorithms", "no-std"]
publish = false

[dependencies]
#awint = { path = "../../awint/awint", default-features = false, features = ["alloc"] }
awint = { version = "0.18", default-features = false, features = ["alloc"] }
# for important doc dependency
awint_core = { version = "0.18", default-features = false }
fracints_internals = { version = "0.1.0", path = "../fracints_internals", default-features = false }
fracints_macros = { version = "0.1.0", path = "../fracints_macros" }
rand_core = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.9"

[features]
default = ["std"]
std = []
rand_support = ["rand_core", "fracints_internals/rand_support"]
serde_support = ["serde"]
