[package]
name = "fracints_internals"
version = "0.1.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/fracints"
documentation = "https://docs.rs/fracints"
description = "Internal utilities for the `fracints` system of crates"
publish = false

[dependencies]
awint = { path = "../../awint/awint", default-features = false, features = ["alloc"] }
#awint = { version = "0.17", default-features = false, features = ["alloc"] }
thiserror = "2.0"

[dev-dependencies]
fracints = { path = "../fracints" }
