[package]
name = "fracints_macros"
version = "0.1.0"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
description = "accompanying proc-macro library to `fracints`"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
fracints_internals = {  version = "0.1.0", path = "../fracints_internals" }
