[package]
name = "testcrate"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "common"
path = "./src/lib/common.rs"

[dependencies]
fracints = { path = "../fracints", features = ["rand_support"] }
image = "0.25"
stacked_errors = "0.7"
star_rng = "0.2"
#star_rng = { path = "../../star_rng" }

[dev-dependencies]
