[package]
name = "testcrate"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "common"
path = "./src/lib/common.rs"

[dependencies]
fracints = { path = "../fracints", features = ["rand_support"] }
stacked_errors = "0.7"
#star_rng = { path = "../../star_rng" }
star_rng = "0.2"

[dev-dependencies]
